Update Makefile and Streamlit app for macro report generation
- Added a new `macro-report` target in the Makefile to facilitate the generation of macro reports.
- Enhanced the Streamlit application to include a dedicated macro report section, allowing users to load and visualize precomputed research data.
- Updated the `app` command to ensure it runs the Streamlit app with the new macro report functionality.
- Made adjustments to the data loading and rendering logic to improve user experience and data handling.

--- a/catalog/datasets.yml
+++ b/catalog/datasets.yml
@@ -136,7 +136,7 @@ datasets:
     years: "ALL"
     partitions: ["season","stat_type"]
     key: ["season","week","player_id","stat_type"]
-    enabled: false
+    enabled: true
     sort_by: ["season","week","player_id","stat_type"]
     max_rows_per_file: 1000000
 
